# video-to-note

./: .gitignore  CLAUDE.md  LICENSE  Media to Notes.md  README.md  SKILL.md  app.py  config.toml  pyproject.toml  script_log.py
.claude/skills/: media-to-notes.md
data/03. transcriptions/: FAÇA ISSO SEMPRE QUE RECEBER SEU SALÁRIO _ Como organizar suas finanças e guardar dinheiro_.json  Vídeo do WhatsApp de 2025-07-05 à(s) 02.31.08_1446e813.json
data/03. transcriptions/Youtube/: Como se tornar um profissional raro no mercado..json  FAÇA ISSO SEMPRE QUE RECEBER SEU SALÁRIO _ Como organizar suas finanças e guardar dinheiro_  FAÇA ISSO SEMPRE QUE RECEBER SEU SALÁRIO _ Como organizar suas finanças e guardar dinheiro_.json
docs/: Analise Tecnica - Media to Notes.md  Bugs e Falhas - 2026-03-23.md  Ideia - Enricher como Comando Obsidian.md  PLAN-CLI-unification.md  PROJETO.md  Plano de Ação - Diarização Semântica.md  README.md  Teste - Sessão 2026-03-20.md  issues-cli_update.md
docs/plans/: 2026-04-02-notebooklm-integration.md
logs_git/: diff_HEAD~2_to_HEAD~1.md  log_2025-06-11.md  log_2025-06-12.md  log_2025-07-27.md
src/: cli.py  config.py  pipeline.py  prompts.py
src/core/: __init__.py  audio.py  converter.py  file_handler.py  notes.py  notes2.py
src/interfaces/: app_youtube.py  local-videos.py
src/services/: notebooklm_cli.py  test.py  transcription.py  youtube-ai.py  youtube.py
src/templates/: template_curso.md  template_youtube.md
src/tests/: audios.xlsx  file_handler_test.py  test_audio.py  test_converter.py  test_notes.py  test_transcription.py  test_youtube.py
src/utils/: __init__.py  duration_utils.py  input_detector.py  utils.py
templates/: template_curso.md  template_youtube copy.md  template_youtube.md  template_youtube_avancado.md  template_youtube_intermediario.md  template_youtube_metacognitivo.md  template_youtube_raso.md
tests/: test_cli.py  test_notes2_utils.py  test_pipeline_utils.py  test_youtube_utils.py
tests/integration/: test_pipeline_notebooklm.py
tests/unit/: test_cli.py  test_duration_utils.py  test_input_detector.py  test_notebooklm.py
(+1 files in other folders)
