[project]
name = "video-to-notes"
version = "0.1.0"
description = "Converta videos locais e do youtube em notas markdown personalizadas"
authors = [
    {name = "Lucas Gabriel de Almeida",email = "156014432+LucasG-Alm@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "typer (>=0.12.0,<1.0.0)",
    "groq (>=0.24.0,<1.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "moviepy (>=2.1.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "yt-dlp (>=2025.6.9,<2026.0.0)",
    "yt-dlp-ytse (>=0.4.3,<0.5.0)",
]

[project.scripts]
mtn = "src.cli:app"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
mtn = "src.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ipykernel = ">=6.29.5,<7.0.0"
jupyter = ">=1.1.1,<2.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
